src/styles/components/_block-2col.scss
.block-2col {
  .content-2col {
    display: grid;
    grid-template-columns: $grid-1col;
    gap: $grid-spacing-md;
    border-radius: $border-radius-sm;

    @media (min-width: $breakpoint-lg) {
      grid-template-columns: $grid-2col;
      grid-gap: $grid-spacing-lg;
    }

    .content-2col__text {
      display: flex;
      flex-direction: column;
      justify-content: center;
      // gap: $grid-spacing-sm;
      // padding: $padding-md 0;

      @media (min-width: $breakpoint-md) {
        // gap: $grid-spacing-md;
        // padding: $padding-xl 0;
      }
    }

    .content-2col__text:nth-of-type(even) {
      margin-top: 0;
    }

    .content-2col__img {
      img {
        width: 100%;
        height: auto;
        object-fit: cover;
        border-radius: $border-radius-sm;

        @media (min-width: $breakpoint-lg) {
          border-radius: $border-radius-lg;
        }
      }
    }
  }

  .content-2col.reverse {
    div:nth-of-type(odd) {
      order: 1;
      @media (min-width: $breakpoint-md) {
        order: 2;
      }
    }

    div:nth-of-type(even) {
      order: 1;
    }
  }
}

